unpackaged/main/default/objects/Employees__c/Employees__c.object-meta.xml
<CustomObject>
    <label>Employees</label>
    <nameField>
        <label>Employees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>