unpackaged/main/default/objects/Employees__c/fields/are_you_vaccinated__c.field-meta.xml
<CustomField>
    <fullName>are_you_vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>are you vaccinated ?</label>
    <type>Checkbox</type>
</CustomField>