unpackaged/main/default/objects/Employees__c/fields/Employee_Alternative_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Alternative_Contact_Number__c</fullName>
    <label>Employee Alternative Contact Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>