unpackaged/main/default/objects/Employees__c/fields/Employee_Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Alternative_Email__c</fullName>
    <label>Employee Alternative Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>