unpackaged/main/default/objects/Employees__c/fields/Employee_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contact_Number__c</fullName>
    <label>Employee Contact Number</label>
    <type>Phone</type>
</CustomField>