unpackaged/main/default/objects/Employees__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <displayFormat>TMSFDC-{00000}</displayFormat>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>