unpackaged/main/default/objects/Employees__c/fields/Employee_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Personal_Email__c</fullName>
    <label>Employee Personal Email</label>
    <type>Email</type>
</CustomField>