unpackaged/main/default/objects/Employees__c/fields/Employee_Pictures__c.field-meta.xml
<CustomField>
    <fullName>Employee_Pictures__c</fullName>
    <label>Employee Pictures</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>