unpackaged/main/default/objects/Employees__c/fields/Have_you_worked_on_Any_Govt_Org__c.field-meta.xml
<CustomField>
    <fullName>Have_you_worked_on_Any_Govt_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you worked on Any Govt Org ?</label>
    <type>Checkbox</type>
</CustomField>