unpackaged/main/default/objects/Employees__c/fields/Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date__c</fullName>
    <label>Joining Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>