unpackaged/main/default/objects/Employees__c/fields/Primary_Project__c.field-meta.xml
<CustomField>
    <fullName>Primary_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>