unpackaged/main/default/objects/Employees__c/fields/Total_Compansation__c.field-meta.xml
<CustomField>
    <fullName>Total_Compansation__c</fullName>
    <label>Total Compansation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>